pushing for linter troubleshooting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "react",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["react", "react-hooks", "prettier"],
   "rules": {
     "prettier/prettier": "error",
     "camelcase": "off",
@@ -32,25 +28,19 @@
     "react/jsx-no-useless-fragment": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "@typescript-eslint/no-shadow": "off",
+    "react/function-component-definition": "off",
+    "react/prop-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     ]
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "moduleDirectory": [
-          "node_modules",
-          "src/"
-        ]
+        "moduleDirectory": ["node_modules", "src/"]
       }
     }
   },
