--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "index.d.ts"],
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
