--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "id-generator": "^1.1.0",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
